# study_stylegan2

./: README.md  main.py  pyproject.toml
discriminator/: discriminator.py  discriminator_block.py  mini_batch_std_dev.py
generator/: GeneratorBlock.py  ToRGB.py  conv_2d_weight_modulate.py  generator.py  generator_block.py  style_block.py
layer/: equalized_linear.py
network/: mapping_network.py
parameter/: equalized_weight.py
