[tool.poetry]
name = "study_stylegan2"
version = "0.1.0"
description = ""
authors = ["ogawa_kazuhisa <ogawa_kazuhisa@cyberagent.co.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
# poetry add pytorchだと入らないので、下記から直接whlを指定する
# https://download.pytorch.org/whl/torch_stable.html
# 参考:
# https://stackoverflow.com/questions/59158044/poetry-and-pytorch
# https://scrapbox.io/ikr7/Poetry_%E3%81%A7_PyTorch_%E3%82%92%E5%85%A5%E3%82%8C%E3%82%8B
torch = {url = "https://download.pytorch.org/whl/cpu/torch-1.9.1-cp39-none-macosx_10_9_x86_64.whl"}
numpy = "^1.22.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
